Changelog for 1.4 Series
Forthcoming

* scripts/* files moved to make inheritance possible (Chris T)
* PostgreSQL contrib dependencies removed, now requre Pg 8.4 (Chris T)
* Re-engineered schema for financial tables (Chris T)

Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for LedgerSMB 1.3.2
* Fixed a few files where suExec fixes were not applied
* Fixed erroneous buttons marked "Save and Post" showing up

Changelog for LedgerSMB 1.3.1
* Language selection for invoice templates fixed (Chris T)
* Fixed DB errors on project search (Chris T)
* Fixed DB errors on timecard entry (Chris T)
* Fixed DB errors on timecard searches (Chris T)
* String standardization in employee/user management (Herman V)
* Fixed Employee record duplicted on save (Herman V)
* Fixed upgrade script not bringing in entity.name for employees (Chris T)
* Fixed upgrade script error importing duplicate customer/vendor numbers
(Chris T)

Changelog for LedgerSMB 1.3.0

Security:
* Security is now robustly enforced on the db level (Chris T and Josh D)
* New user interface to manage users (Chris T and Aurynn)
* Framework in place, used to prevent XSRF attacks (Chris T)

Separation of Duties:
* Separate permissions for entry and posting to the books.
* Voucher/Batch system (Chris T)
* Draft system for unapproved transactions (Chris T)
* Reconciliation is now subject to separation of duties (Chris T and Aurynn)

End of Year:
* Close books and end of year transactions at once (Chris T and Aurynn)
* Cannot close books where unapproved transactions are before yearend(Chris T)
* Yearend/closed books now creates balance checkpoints for better performance
(Chris T and Aurynn)
* The prohibition against entering transactions into closed period enforced
on a database level.

General Ledger/Journal:
* GL reports filter by account (Chris T)
* GL reports account is ajax-style autocomplete (John W)